Fix layout bugs on welcome page and in footer
Conflicts:
	app/assets/stylesheets/controller/welcome.css.scss

--- a/app/assets/stylesheets/controller/welcome.css.scss
+++ b/app/assets/stylesheets/controller/welcome.css.scss
@@ -338,6 +338,14 @@
 }
 
 
+#coop > .teaser-inner {
+  background-color: #5F9537;
+  color: $white;
+
+  img {
+    max-width: 100%;
+  }
+}
 
 
 
